# log2src

./: .gitignore  .vscodeignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.rs  package-lock.json  package.json  pnpm-lock.yaml
.github/workflows/: main.yml  rust.yml
docs/: Tasks.md
editors/code/: .gitignore  .vscodeignore  CHANGELOG.md  README.md  eslint.config.mjs  package.json  pnpm-lock.yaml  tsconfig.json
examples/: animals.rs  basic.rs  dining.rs  stack.rs
examples/modexample/: garden.rs  main.rs
schemas/: cache-header-v1.json
src/: call_graph.rs  code_source.rs  debugAdapter.ts  extension.ts  lib.rs  log_format.rs  main.rs  progress.rs  source_hier.rs  source_query.rs  source_ref.rs  ui.rs
src/assets/: style.toml
src/snapshots/: log2src__log_format__tests__invalid_regex.snap  log2src__log_format__tests__no_body.snap  log2src__log_format__tests__unknown_cap.snap  log2src__source_hier__test__with_resources_dir-2.snap  log2src__source_hier__test__with_resources_dir-3.snap  log2src__source_hier__test__with_resources_dir-4.snap  log2src__source_hier__test__with_resources_dir.snap  log2src__tests__backtrace_re-2.snap  log2src__tests__backtrace_re-3.snap  log2src__tests__backtrace_re-4.snap  log2src__tests__backtrace_re.snap  log2src__tests__basic_python.snap  log2src__tests__extract_logging.snap  log2src__tests__link_to_quality_source.snap  log2src__tests__python_trace.snap
subdir/: CHANGELOG.md  package.json
subdir/src/: debugAdapter.ts  extension.ts
tests/: common_settings.rs  integration_test.rs  test_java.rs  test_rust.rs  test_utils.rs  utils.rs
tests/common_settings/: mod.rs
tests/java/: Basic.java  BasicSlf4j.java  BasicWithCustom.java  BasicWithLog.java  BasicWithUpper.java
tests/snapshots/: test_java__basic.snap  test_java__basic_invalid_utf.snap  test_java__basic_range.snap  test_java__basic_slf4j-2.snap  test_java__basic_slf4j-3.snap  test_java__basic_slf4j.snap  test_java__basic_unix.snap  test_java__basic_windows.snap  test_java__basic_with_log.snap  test_java__basic_with_log_format-2.snap  test_java__basic_with_log_format.snap  test_java__basic_with_log_format_unix.snap  test_java__basic_with_log_unix.snap  (+14 more)
(+14 files in other folders)
