[package]
name = "log2src"
authors = ["Tim Likarish Ellis"]
description = "log2src maps logs back to source code"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.36", features = ["derive"] }
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tree-sitter = "0.25.3"
tree-sitter-rust = "0.24.0"
tree-sitter-java = "0.23.5"
rayon = "1.10.0"

[build-dependencies]
cc="*"

[dev-dependencies]
assert_cmd = "2.0.16"
env_logger = "0.11.8"
insta = { version = "1.43.1", features = ["yaml"] }
insta-cmd = "0.6.0"
log = "0.4.27"
rand = "0.9.0"
