[package]
name = "log2src"
authors = ["Tim Likarish Ellis"]
description = "log2src maps logs back to source code"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = { version = "2.0.1", features = ["serde", "std"]}
clap = { version = "4.5.36", features = ["std", "derive"] }
colored_json = "5.0.0"
directories = "6.0.0"
indicatif = "0.18.0"
itertools = "0.14.0"
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_regex = "1.1.0"
sha2 = "0.10.9"
tempfile = "3.23.0"
thiserror = "2.0.16"
tree-sitter = "0.25.3"
tree-sitter-cpp = "0.23.4"
tree-sitter-rust-orchard = "0.12.0"
tree-sitter-java = "0.23.5"
tree-sitter-python = "0.25.0"
rayon = "1.11.0"
miette = { version = "7.6.0", features = ["fancy", "serde"] }

[build-dependencies]
cc="*"

[dev-dependencies]
assert_cmd = "2.0.16"
env_logger = "0.11.8"
insta = { version = "1.43.1", features = ["yaml", "filters"] }
insta-cmd = "0.6.0"
log = "0.4.27"
rand = "0.9.0"
tempfile = "3.22.0"
fs_extra = "1.3"
walkdir = "2.5.0"
